<resources>
    <string name="app_name">QuizApplication</string>
    <string name="true_text">Σ</string>
    <string name="false_text">Λ</string>
    <string name="correct_answer">Απάντησες Σωστά</string>
    <string name="wrong_answer">Απάντησες Λάθος</string>
    <string name="question_declaration">Ο Πολύγυρος είναι πρωτεύουσα του νομου Χαλκιδικής .</string>
    <string name="question_temp">Η Βέροια είναι πρωτεύουσα του νομού Ημαθίας.</string>
    <string name="question_body">Τα Γιαννιτσά είναι πρωτεύουσα του νομού Ημαθίας.</string>
    <string name="question_human">Η Αράχοβα βρίσκεται στον νομό Φωκίδας. </string>
    <string name="question_physics">Η Πτολεμαΐδα είναι πρωτεύουσα του νομού Κοζάνης. </string>
    <string name="question_spider">Το Μέτσοβο βρίσκεται στον νομό Θεσπρωτίας. </string>
    <string name="question_water">Το Γύθεο βρίσκεται στον νομό Μεσσηνίας. </string>
    <string name="question_shark">Η βόνιτσα βρίσκεται στον νομό Πρέβεζας. </string>
    <string name="question_electron">Η Νιγριτα βρίσκεται στον νομό Δράμας. </string>
    <string name="question_planet">Ο Δομοκός βρίσκεται στον νομό Μαγνησίας. </string>
    <string name="question_ocean">Ο Τύρναβος βρίσκεται στον νομό καρδίτσας. </string>
    <string name="previous_text">previous</string>
    <string name="next_text">next_text</string>
    <string name="ture_text">ture</string>
    <string name="false_">false</string>
    <string name="question_kavalas">Η θάσος βρίσκεται στον νομό Καβάλας. </string>
    <string name="question_florinas">Το Αμύνταιο βρίσκεται στον νομό Φλώρινας</string>
    <string name="question_peloponnhso">Η λίμνη Κορώνεια βρίσκεται στην Πελοπόννησο. </string>
    <string name="question_aitoloakarnanias">Η λίμνη Τριχωνίδα βρίσκεται στον νομό ΑιτωλοΑκαρνανίας. </string>
    <string name="question_thrakhs">Η λίμνη Βιστωνίδα βρίσκεται στο γεωγραφικό διαμέρισμα της Θράκης. </string>
    <string name="question_makedonia">Η λίμνη Πετρών βρίσκεται στη Μακεδονία. </string>
    <string name="question_ellada">Το βουνό Ταύγετος βρίσκεται στη Στερά Ελλάδα. </string>
    <string name="question_thessalias">Η λίμνη Πετρών βρίσκεται στη Μακεδονία. </string>
    <string name="question_naupaktos">Η Ναύπακτος βρίσκεται στον νομό Αιτωλοακαρνανίας. </string>
    <string name="question_olybos">Το βουνο ολυμπος βρίσκεται στα όρια Μκεδονίας. </string>
    <string name="question_voras">Το βουνό Βόρας(καίμακτσαλάν) βρίσκεται στη Στερά Ελλάδα. </string>
    <string name="question_idh">Το βουνό Ίδη (Ψληορείτης) βρίσκεται στην Πελοπόννησο. </string>
    <string name="question_galaksidi">Το Γαλαξίδι βρίσκεται στον νομό Φωκίδας. </string>
    <string name="question_atalanth">Η Αταλάντη βρίσκεται στον νομό φθιώτιδας. </string>
    <string name="question_parnonas">Το βουνό Πάρνωνας βρίσκεται στην Πελοπόννησο. </string>
    <string name="question_kithaironas">Η Αμφιλοχία βρίσκεται στον νομό Άρτας. </string>
    <string name="question_elikonas">Το βουνό Ελικώνας βρίσκεται στη Στερεά Ελλάδα. </string>
    <string name="question_paggaio">Το βουνό Παγγααίο βρίσκεται στη Στερεά Ελλάδα. </string>
    <string name="question_kalabaka">Η Καλαμπάκα βρίσκεται στον νομό Τρικάλων. </string>
    <string name="question_plasthra">Η λίμνη Πλαστήρα βρίσκεται στον νομό καρδίτσας. </string>
    <string name="question_orestiada">Η Όρεστιάδα βρίσκεται στον νομό Έβρου. </string>
    <string name="question_ormenio">Το Ορμένιο είναι το βορειότερο τμήμα του νομού Έβροα, το ακρότατο σημείο της χώρας στον Βορρά, στα ελληνοβουλγαρικά σύνορα. </string>
    <string name="question_gaydos">Η Γαύδος είναι το ανατολικότερο νησί της Ελλάδας. </string>
    <string name="question_nhsiotiko">Το νησιοτικό σύμπλεγμα της Μεγίστης βρίσκεται στο ανατολικότερο σημείο της Ελλάδας. </string>
    <string name="question_fanoi">Οι Οθωνοί ή αλλιώς Φανοί το μικρό νησάκι του νομύ της Κέρκυρας, είναι το δυτικότερο σημείο της Ελλάδας. </string>
    <string name="question_aliakmonas">Ο Ποταμός Αλιάκμονας εκβάλλει στον Θερμαϊκό Κόλπο. </string>
    <string name="question_aksios">Ο ποταμός Αξιός εκβάλλει στο Ιόνιο Πέλαγος. </string>
    <string name="question_axelos">Ο ποταμός Αχελώος εκβάλλει στο Ιόνιο Πέλαγος. </string>
    <string name="question_phneios">Ο ποταμός Πηνειός (της Θεσσαλίας) εκβάλλει στον Θερμαϊκό Κόλπο. </string>
    <string name="question_krhth">Η Κρήτη χωρίζεται σε τέσσερις νομόυς</string>
    <string name="question_pente">Η Πελοπόννησος χωρίζεται σε πέντε νομούς. </string>
    <string name="question_thessalia">Η Θεσσαλία χωρίζεται σε τέσσερις νομούς</string>
    <string name="question_sterea">Η Στερεά Ελλάδα χωρίζεται σε πέντε νομύς. </string>
    <string name="question_kasos">Η κάσος βρίσκεται στο Αιγαιο Πέλαγος.</string>
    <string name="question_astypalaia">Η αστυπάλαια βρίσκεται στο Αιγαίο Πέλαγος.</string>
    <string name="question_ithakh">Η Ιθάκη βρίσκεται στο Ιόνιο Πέλαγος.</string>
    <string name="question_paksoi">Οι Παξοί βρίσκονται στο Ιόνιο Πέλαγος.</string>
    <string name="question_aoos">Ο Αώος ποταμός πηγάζει από την Πίνδο, περνά στην Αλβανία και εκβάλλει στο Αιγαίο Πέλαγος. </string>
    <string name="question_potamoi">Ποταμοί της Πελοποννήσου είναι ο Αλφειός, ο Λάδωνας και ο Ευρώτας.</string>
    <string name="question_ionio">Στο Ιόνιο Πέλαγος εκβάλλουν:Ο Άραχθος,Ο Λούρος, Ο Αχελωος,Ο Εύηνος,ο Μόρνος.</string>
    <string name="question_pelagos">Στο Αιγαίο Πέλαγος εκβάλλουν:Ο Αλιάκμονας,Ο Πηνειός, Ο Σπερχειός.</string>
    <string name="question_limnes">Οι λίμνες της Μεγάλης και Μικρής Πρέσπας ανήκουν και στην Ελλάδα και στη Δημοκρατία της Βόρειας Μακεδονίας και στην Αλβανία. </string>
    <string name="question_pamvotida">Η Παμβώτιδα λίμνη βρίσκεται στον νομό Ιωαννίνων.</string>
    <string name="question_gnostoterh">Η γνωστότερη λιμνοθάλασσα είναι αυτή του Μεσολογγίου, που σχηματίζεται στις εκβολές του Αχελώου ποταμού..</string>
    <string name="question_kyriotera">Τα κυριότερα Αγροτικά Προϊόντα που παράγονται στη χώρα μας είναι: δημητριακά, ελιές-λάδι, σταφύλια-κρασί, εσπεριδοειδή, βιομηχανικά φυτά (καπνά, βαμβάκι, τεύτλα)λαχανικά.</string>
    <string name="question_patra">Η Πάτρα βρίσκεται στο γεωγραφικό διαμέρισμα της Πελοποννήσου.</string>
    <string name="question_leykada">Η Λευκάδα ανήκει στο γεωγραφικό διαμέρισμα των Επτανήσων.</string>
    <string name="question_euboia">Η Ευβοια είναι το μεγαλύτερο (σε έκταση)νησί της Ελλάδας. </string>
    <string name="question_trikala">Τα Τρίκαλα είναι η πρωτεύουσα της Θεσσαλίας. </string>
    <string name="question_porthmos">Ο πορθμός του Ευρίπου βρίσκεται στη Χαλκίδα.</string>
    <string name="question_podophs">Ο νομός Ροδόπης έχει πρωτεύουσα την κομοτηνή.</string>
    <string name="question_biotias">Ο νομός Βοιωτίας έχει πρωτεύουσα τη Θήβα. </string>
    <string name="question_elladas">Τα κλίμα της Ελλάδας είναι εύκρατο μεσογειακό.</string>
    <string name="question_aigaio">Στο Αιγαίο πέλαγος βρίσκονται οι Κυκλάδες και τα Δωδεκάνησα.</string>
    <string name="question_ydra">Στο Ιόνιο Πέλαγος βρίσκεται η Ύδρα. </string>
    <string name="question_boreies">Στις Βόρειες Σποράδες ανήκει η Σκάθος.</string>
    <string name="question_psara">Το Ψαρά βρίσκονται στο Αιγαίο Πέλαγος.</string>
    <string name="question_Xora">Στη χώρα μας θπάρχουν ευκαταστάσεις παραγωγής ηλεκτρικής ενέργειας από λιγνίτη στην Πτολεμαΐδα.</string>
    <string name="question_upedafos">Στο υπέδαφος της Μεγαλόπολης και του αλιβερίου θπάρχουν κοιτάσματα λιγνίτη.</string>
    <string name="question_megalytero">Το μεγαλύτερο μέρος της ηλεκτρικής ενέργειας που καταναλώνουμε παράγεται από τα κοιτάσματα λιγνίτη.</string>
    <string name="question_megalyteres">Οι μεγαλύτερες βιομηχανικές μονάδες της χώρας μας βρίσκονται στην πελοπόννησο. </string>
    <string name="score">Score 0/20</string>
    <string name="scoreB">Score 0/10</string>
    <string name="question_number">1/20 Question</string>
    <string name="question_numberB">1/10 Question</string>
    <string name="question_1">Ο Γεώργιος Παπανδρέου έμεινε γνωστός ως?</string>
    <string name="question1_A">ο γέρος του Μοριά.</string>
    <string name="question1_B">ο γέρος της Δημοκρατίας.</string>
    <string name="question1_C">Γεωργάκης Ολύμπιος.</string>
    <string name="question1_D">Γεώργιος Α΄.</string>
    <string name="answer_1">ο γέρος της Δημοκρατίας.</string>
    <string name="question_2">Στον 5ο και 4ο αι. π.Χ. δεν πήρε ποτέ την ηγεμονία άλλων ελληνικών πόλεων?</string>
    <string name="question_2A">η Αθήνα.</string>
    <string name="question_2B">η Θεσσαλονίκη.</string>
    <string name="question_2C">η Θήβα.</string>
    <string name="question_2D">η Σπάρτη.</string>
    <string name="answer_2">η Θεσσαλονίκη.</string>
    <string name="question_3">Η Βυζαντινή Αυτοκρατορία ήταν?</string>
    <string name="question_3A">εχθρός της Ρωμαϊκής Αυτοκρατορίας.</string>
    <string name="question_3B">η Δυτική Ρωμαϊκή Αυτοκρατορία.</string>
    <string name="question_3C">το Ανατολικό τμήμα της Ρωμαϊκής Αυτοκρατορίας.</string>
    <string name="question_3D">σύμμαχος της Ρωμαϊκής Αυτοκρατορίας.</string>
    <string name="answer_3">το Ανατολικό τμήμα της Ρωμαϊκής Αυτοκρατορίας.</string>
    <string name="question_4">Ο Μακεδονικός Αγώνας ήταν σύγκρουση μεταξύ?</string>
    <string name="question_4A">μεταξύ των Μακεδόνων του Φιλίππου και των υπολοίπων ελληνικών κρατών.</string>
    <string name="question_4B">μεταξύ των Ελλήνων και των Βουλγάρων.</string>
    <string name="question_4C">μεταξύ των Βενιζελικών και των βασιλικών.</string>
    <string name="question_4D">μεταξύ των Ελλήνων και των Οθωμανών.</string>
    <string name="answer_4">μεταξύ των Ελλήνων και των Βουλγάρων.</string>
    <string name="question_5">Κατά τη διάρκεια της γερμανικής Κατοχής οι Έλληνες?</string>
    <string name="question_5A">οργάνωσαν κρυφά σχολεία.</string>
    <string name="question_5B">σχημάτισαν ομάδες ένοπλης αντίστασης στα βουνά.</string>
    <string name="question_5C">κατέφευγαν στην Αμερική.</string>
    <string name="question_5D">συνεργάστηκαν στην πλειονότητά τους με τους Γερμανούς.</string>
    <string name="answer_5">σχημάτισαν ομάδες ένοπλης αντίστασης στα βουνά.</string>
    <string name="question_6">Κατά τη δεκαετία 1950-1960?</string>
    <string name="question_6A">η Ελλάδα είχε σοσιαλιστικό καθεστώς</string>
    <string name="question_6B">πολλοί Έλληνες μετανάστευσαν.</string>
    <string name="question_6C">η Ελλάδα και η Κύπρος ήταν ενωμένες.</string>
    <string name="question_6D">η Ελλάδα ήταν μέλος της ΕΟΚ.</string>
    <string name="answer_6">πολλοί Έλληνες μετανάστευσαν.</string>
    <string name="question_7">Οι βρετανικές αρχές συνέλαβαν και απαγχόνισαν για τον αγώνα τους
εναντίον της βρετανικής κυριαρχίας στην Κύπρο τους?</string>
    <string name="question_7A">Αρμόδιο και Αριστογείτονα.</string>
    <string name="question_7B">Σάκο και Βαντσέτι.</string>
    <string name="question_7C">Μ.Καραολή και Α.Δημητρίου.</string>
    <string name="question_7D">Μ.Γλέζο και Α.Σάντα.</string>
    <string name="answer_7">Μ.Καραολή και Α.Δημητρίου.</string>
    <string name="question_8">Πνευματικό ίδρυμα που άρχισε να λειτουργεί τον 17ο αι. και
επηρέασε τη συνείδηση του Ποντιακού Ελληνισμού.?</string>
    <string name="question_8A">Λύκειον της Κερασούντος</string>
    <string name="question_8B">Γυμνάσιον της Αμισού</string>
    <string name="question_8C">Φροντιστήριον της Τραπεζούντος</string>
    <string name="question_8D">Πανεπιστήμιον της Σαμψούντος</string>
    <string name="answer_8">Φροντιστήριον της Τραπεζούντος</string>
    <string name="question_9">Εξαιτίας της έντονης παρουσίας του ελληνικού στοιχείου, μία περιοχή
στον Νότο της Ιταλίας ονομάστηκε?</string>
    <string name="question_9A">Άλλη Ελλάδα.</string>
    <string name="question_9B">Δεύτερη Ελλάδα.</string>
    <string name="question_9C">Μικρή Ελλάδα.</string>
    <string name="selectedoption">SelectedOption</string>
    <string name="correctanswer">CorrectAnswer</string>
</resources>