<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFE0B2"
    tools:context=".History1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/QuestionNumber"
        android:text="@string/question_number"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20dp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectedoption"
            android:visibility="gone"
            android:id="@+id/selectoption"
            android:textAlignment="center"
            android:textColor="@color/black">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CorrectAnswer"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textAlignment="center"
            android:text="@string/correctanswer">


        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">


        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_back_white_stroke2_10"
            android:text="@string/question_1"
            android:textColor="@color/black"
            android:textSize="15sp">

        </TextView>


    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/FirstTwoOption"
    android:layout_gravity="center"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/optionA"
        android:text="@string/question1_A"
        android:background="@drawable/round_back_white_stroke2_10"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:paddingTop="14dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/optionB"
        android:text="@string/question1_B"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:background="@drawable/round_back_white_stroke2_10"
        android:textAlignment="center"
        android:paddingTop="14dp">

    </TextView>



</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RemainingTwoOption"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionC"
            android:text="@string/question1_C"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:background="@drawable/round_back_white_stroke2_10"
            android:textAlignment="center"
            android:paddingTop="14dp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionD"
            android:text="@string/question1_B"
            android:textColor="@color/black"
            android:background="@drawable/round_back_white_stroke2_10"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:paddingTop="14dp">

        </TextView>






    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">




        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textStyle="bold" />



        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffa384"
            android:layout_gravity="bottom"
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false">

        </ProgressBar>

        <Button
            android:id="@+id/aswerBTN1"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_back_light_yollow10"
            android:text="οι απαντήσεις"
            android:textSize="15dp"
            tools:ignore="TouchTargetSizeCheck" />


    </LinearLayout>






</LinearLayout>